add: put and delete travel package
